# lichess-woodpecker

./: .env.example  .gitignore  CHANGELOG.md  README.md  dev.sh
backend/: __init__.py  auth.py  build_puzzle_catalog.py  chess_com.py  database.py  main.py  puzzle_catalog.py  pyproject.toml  schema.sql
backend/tests/: conftest.py  test_auth.py
docs/assets/: playthrough.mov  playthrough2.mov
frontend/: eslint.config.js  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  App.tsx  api.js  api.ts  index.css  schedule.js  schedule.ts  timeline.js  timeline.ts  types.ts
frontend/src/components/: Dashboard.jsx  Dashboard.tsx  LoadingCard.tsx  RatingChart.jsx  RatingChart.tsx  TimelineBar.jsx  TimelineBar.tsx  Training.jsx  Training.tsx
frontend/src/pages/: Home.jsx  Home.tsx  SetDetail.jsx  SetDetail.tsx
