[project]
name = "chess-woodpecker"
version = "0.1.0"
description = "Chess puzzle training with spaced repetition"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.135.2",
    "httpx>=0.28.1",
    "itsdangerous>=2.2.0",
    "pandas>=3.0.1",
    "psycopg[binary]>=3.2.9",
    "uvicorn[standard]>=0.42.0",
    "zstandard>=0.25.0",
]
