[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chess-woodpecker"
version = "0.1.0"
description = "Chess puzzle training with spaced repetition"
requires-python = ">=3.14"
dependencies = [
    "authlib>=1.6.5",
    "fastapi>=0.135.2",
    "httpx>=0.28.1",
    "itsdangerous>=2.2.0",
    "numpy>=2.4.3",
    "psycopg[binary]>=3.2.9",
    "psycopg-pool>=3.2.6",
    "uvicorn[standard]>=0.42.0",
    "zstandard>=0.25.0",
]

[tool.setuptools]
py-modules = ["auth", "chess_com", "database", "main", "puzzle_catalog"]
